deploy/03-mqtt-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-mqtt
  namespace: scadable-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-mqtt
  template:
    metadata:
      labels:
        app: service-mqtt
    spec:
      imagePullSecrets:
        - name: ovh-registry-secret
      containers:
        - name: service-mqtt
          image: wuo1g9bo.c1.bhs5.container-registry.ovh.net/scadable/service-mqtt:latest
          ports:
            - containerPort: 9091
              name: http
            - containerPort: 1883
              name: mqtt-tcp
---
apiVersion: v1
kind: Service
metadata:
  name: service-mqtt
  namespace: scadable-io
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9091
      targetPort: http
    - name: mqtt
      port: 1883
      targetPort: mqtt-tcp
  selector:
    app: service-mqtt
