deploy/04-mqtt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt-ingress
  namespace: scadable-io
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "test.scadable.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-mqtt
                port:
                  number: 9091
